Prevents page shifting when scroll bar appears

--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,8 @@ body {
   background: #f0f0f0;
   height: 100%;
   padding: 100px 20px 0;
+  margin-right: calc(-1 * (100vw - 100%));
+  overflow-x: hidden;
 }
 
 main {
